# webtest-gui

./: .gitignore  README.md  pyproject.toml
src/webtest_gui/: main.py  styles.py
tests/: test_google.py  test_google_fail.py  test_google_title.py  test_python_org.py
