[project]
name = "webtest-gui"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pyside6 (>=6.9.0,<7.0.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pyinstaller (>=6.13.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "webtest_gui", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
